--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background: linear-gradient(-45deg, #e65d33, #e53377, #1ba8db, #1bd9ad);
 	background-size: 400% 400%;
 	animation: gradient 5s ease infinite;
 }
